feat: Add PDF export and enhance data parsing
Integrates jspdf and jspdf-autotable for PDF export functionality.
Improves data parsing in GoogleSheetsService to handle various date formats and ensure consistent data types for amount, name, and category.
Adds date filtering to TransactionList for improved data management.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "lucide-react": "^0.463.0",
     "recharts": "^2.13.3",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.5"
+    "tailwind-merge": "^2.5.5",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.2"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
